fix warnings from Java 17